# postgres

./: meson.build
contrib/: meson.build
contrib/auth_delay/: auth_delay.c
contrib/auto_explain/: auto_explain.c
contrib/basebackup_to_shell/: basebackup_to_shell.c
contrib/basic_archive/: basic_archive.c
contrib/fsync_checker/: fsync_checker_smgr.c
contrib/oid2name/: meson.build
contrib/pg_prewarm/: autoprewarm.c
contrib/pg_stat_statements/: pg_stat_statements.c
contrib/pg_trgm/: trgm.h  trgm_op.c
contrib/postgres_fdw/: option.c  postgres_fdw.h
contrib/vacuumlo/: meson.build
doc/src/sgml/: config.sgml
src/: meson.build
src/backend/archive/: shell_archive.c
src/backend/backup/: basebackup.c  basebackup_copy.c  basebackup_gzip.c  basebackup_progress.c  basebackup_server.c  basebackup_target.c  basebackup_throttle.c
src/common/: base64.c  encnames.c  f2s.c  file_perm.c  jsonapi.c  keywords.c  logging.c  pg_lzcompress.c  pg_prng.c  relpath.c  saslprep.c  username.c  wchar.c
src/fe_utils/: cancel.c
src/include/: fmgr.h  miscadmin.h  pgstat.h  pgtime.h  port.h  postgres.h  postgres_ext.h
src/port/: chklocale.c  pg_bitutils.c  pg_crc32c_sb8.c  pg_crc32c_sse42_choose.c  strerror.c
src/timezone/: pgtz.c
src/tools/: find_typedef  find_typedefs.pl
src/tools/pgguclifetimes/: meson.build  pgguclifetimes.c  vector.c  vector.h
src/tools/pgguclifetimes/t/: 001_pgguclifetimes.pl
src/tools/pgguclifetimes/tests/failure/: compile_commands.json  example.c
src/tools/pgguclifetimes/tests/success/: compile_commands.json  example.c
(+429 files in other folders)
